--- a/new/styles/style.css
+++ b/new/styles/style.css
@@ -23,6 +23,7 @@ a {
   color: #fff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-decoration: none;
+  outline: none;
   }
 a:hover {
   color: #fff;
