--- a/styles/style.css
+++ b/styles/style.css
@@ -490,11 +490,11 @@ display: none;
     width: 200px;
     height: 200px;
   }
-  .release-link:hover .release-info-cover img {
+  .release-link:hover img {
     transform: scale(1.1);
     transition: transform 5s ease-out;
   }
-  .release-link .release-info-cover img {
+  .release-link img {
     transition: transform .5s ease-out;
   }
   .release-info-desc {
