--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ h2 {
 
 .header {
   flex: 0 0 auto;
-  padding: 30px 20px;
+  padding: 40px 20px;
   text-align: center;
 }
 
@@ -133,13 +133,18 @@ h2 {
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .nav-item {
   position: relative;
-  padding: 0 20px;
-  margin-bottom: 5px;
+  padding: 0 15px;
+}
+
+@media screen and (min-width: 1024px) {
+  .nav-item {
+    position: relative;
+    padding: 0 20px;
+  }
 }
 
 .nav-item::after {
@@ -151,6 +156,14 @@ h2 {
   height: 2px;
   border-radius: 100%;
   background-color: rgba(255, 255, 255, 0.5);
+}
+
+.nav-item:first-child {
+  padding-left: 0;
+}
+
+.nav-item:last-child {
+  padding-right: 0;
 }
 
 .nav-item:last-child::after {
