--- a/styles/style.css
+++ b/styles/style.css
@@ -161,8 +161,9 @@ h2 {
   top: 50%;
   right: 0;
   content: '';
-  width: 2px;
-  height: 2px;
+  width: 3px;
+  height: 3px;
+  margin-top: -1px;
   border-radius: 100%;
   background-color: rgba(255, 255, 255, 0.5);
 }
